fix: gap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,7 +150,7 @@ input, select, textarea {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		gap: 0em;
+		gap: -0.5em;
 		animation: spin 10s infinite linear;
 		padding-right: 1em;
 	}
